--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,12 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'login-register/css/style.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'login-register/css/style.css' %}"> -->
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-    <link rel="stylesheet"
-        href="{% static 'login-register/fonts/material-icon/css/material-design-iconic-font.min.css' %}">
+    <!-- <link rel="stylesheet"
+        href="{% static 'login-register/fonts/material-icon/css/material-design-iconic-font.min.css' %}"> -->
 
     <!-- Main css -->
 </head>
@@ -67,7 +67,7 @@
         </div>
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a href="index.html" class="navbar-brand">
+                <a href="{% url 'home' %}" class="navbar-brand">
                     <h1 class="text-primary display-6">Fruitables</h1>
                 </a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
@@ -78,38 +78,92 @@
                     <div class="navbar-nav mx-auto">
                         <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
                         <a href="{% url 'shop' %}" class="nav-item nav-link">Shop</a>
-                        <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a href="cart.html" class="dropdown-item">Cart</a>
-                                <a href="chackout.html" class="dropdown-item">Chackout</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                {% if request.user.is_authenticated %}
+                                <a href="{% url 'cart' user.id %}" class="dropdown-item">Cart</a>
+                                {% else %}
+                                <a href="{% url 'login-page' %}" class="dropdown-item">Cart</a>
+                                {% endif %}
+                                <a href="{% url 'checkout' %}" class="dropdown-item">Chackout</a>
+                                <a href="{% url 'testimonial' %}" class="dropdown-item">Testimonial</a>
+                                <a href="{% url '404' %}" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex m-3 me-0">
                         <button
                             class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
                             data-bs-toggle="modal" data-bs-target="#searchModal"><i
                                 class="fas fa-search text-primary"></i></button>
-                        <a href="#" class="position-relative me-4 my-auto">
+                        {% if request.user.is_authenticated %}
+                        <a href="{% url 'cart' user.id %}" class="position-relative me-4 my-auto">
+                            <i class="fa fa-shopping-bag fa-2x"></i>
+                            <span
+                                class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
+                                style="top: -5px; left: 15px; height: 20px; min-width: 20px;">{{carts_count}}</span>
+                        </a>
+                        {% else %}
+                        <a href="{% url 'login-page' %}" class="position-relative me-4 my-auto">
                             <i class="fa fa-shopping-bag fa-2x"></i>
                             <span
                                 class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
                                 style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                         </a>
-                        <a href="#" class="my-auto">
+                        {% endif %}
+                        <div class="nav-item dropdown">
+                            {% if user.is_authenticated %}
+                            <a href="#" class="nav-link dropdown-toggle my-auto"
+                                data-bs-toggle="dropdown">{{user.first_name}} <i class="fas fa-user fa-2x"></i></a>
+                            <div class="dropdown-menu m-0 bg-secondary rounded-0">
+                                <a href="{% url 'log-out' %}" class="dropdown-item">Log Out</a>
+
+                            </div>
+                            {% else %}
+                            <a href="#" class="nav-link dropdown-toggle my-auto" data-bs-toggle="dropdown">ACCOUNT <i
+                                    class="fas fa-user fa-2x"></i></a>
+                            <div class="dropdown-menu m-0 bg-secondary rounded-0">
+                                <a href="{% url 'login-page' %}" class="dropdown-item">Login</a>
+                                <a href="{% url 'register-page' %}" class="dropdown-item">Register</a>
+
+                            </div>
+                            {% endif %}
+                        </div>
+                        <!-- <a href="#" class="my-auto">
                             <i class="fas fa-user fa-2x"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </nav>
         </div>
     </div>
     <!-- Navbar End -->
+
+
+    <!-- Modal Search Start -->
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content rounded-0">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body d-flex align-items-center">
+                    <div class="input-group w-75 mx-auto d-flex">
+                        <form action="{% url 'shop' %}" class="input-group w-75 mx-auto d-flex">
+
+                            <input type="search" class="form-control col-md-7 p-3" name="search" placeholder="keywords"
+                                aria-describedby="search-icon-1">
+                            <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"> </i></span>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Search End -->
 
     {% block content %}
 
