--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,8 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'users/base.html' %}
 {% load static %}
 {% block content %}
 <!-- Sign up form -->
-<br><br><br><br><br><br><br><br><br>
 <section class="signup">
     <div class="container">
         <div class="signup-content">
